--- a/WebDev.css
+++ b/WebDev.css
@@ -16,15 +16,17 @@
 .Column3 { grid-area: Column3; }
 
 .Header {
-    background-color: #f1f1f1;
     text-align: center;
-    padding: 40px;
+    padding: 30px;
+    height: 40px;
+    
 }
 
 .Navbar {
     overflow: hidden;
     background-color: #333;
     height: 50px;
+    width: 400px;
 }
 
 .Navbar a{
@@ -42,12 +44,30 @@
 }
 
 .Column1 {
-  padding-left: 40px;
+  padding-left: 10px;
 }
 
 .Column2 {
-  padding-left: 40px;
+  padding-left: 30px; 
+  padding-right: 10px;
 }
 .Column3 {
-  padding-left: 40px;
+  padding-left: 60px;
+}
+
+table, tr, td {
+  border: 1px solid black;
+  text-align: center;
+  font-size: 18px;
+  font-family: Arial;
+}
+
+.table { grid-area: table; 
+  width: 20px;
+  padding-bottom: 100px;
+  }
+
+div.grad {
+  background: linear-gradient(grey, lightgrey);
+  height: 969px;
 }
