--- a/WebDev.css
+++ b/WebDev.css
@@ -1,3 +1,9 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -19,6 +25,8 @@
     text-align: center;
     padding: 30px;
     height: 40px;
+    font-family: Arial;
+    font-size: 24px;
     
 }
 
@@ -26,7 +34,7 @@
     overflow: hidden;
     background-color: #333;
     height: 50px;
-    width: 400px;
+    width: 349px;
 }
 
 .Navbar a{
