--- a/WebDev.css
+++ b/WebDev.css
@@ -42,6 +42,8 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
+    font-family: Arial;
+    font-size: 14px;
     padding: 14px 16px;
 }
 
@@ -64,18 +66,22 @@
 }
 
 table, tr, td {
-  border: 1px solid black;
-  text-align: center;
-  font-size: 18px;
-  font-family: Arial;
+    border: 2px solid black;
+    text-align: center;
+    font-size: 23px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 
 .table { grid-area: table; 
-  width: 20px;
-  padding-bottom: 100px;
-  }
+  width: 450px;
+  padding-top: 200px;
+  padding-right: 30px;
+  border-collapse: collapse;
+}
 
 div.grad {
   background: linear-gradient(grey, lightgrey);
   height: 969px;
 }
+
